special support for RegistryEvents and TagEvents might have to be KessJS exclusive, I dont know